# aether-keeper

./: .env.example  .gitattributes  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DEPLOYMENT.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
contracts/aether_core/: Cargo.toml
contracts/aether_core/src/: events.rs  lib.rs  storage.rs  tests.rs
frontend/: .npmrc  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: CreateTaskModal.tsx  Header.tsx  TaskDashboard.tsx  TaskStats.tsx  TaskTable.tsx
frontend/src/hooks/: useContract.ts
frontend/src/store/: wallet.ts
frontend/src/styles/: globals.css
frontend/src/utils/: soroban.ts
keeper-cli/: Cargo.toml
keeper-cli/src/: config.rs  executor.rs  keeper.rs  main.rs
scripts/: fund_accounts.sh
