[package]
name = "aether_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
soroban-sdk = "21.3"
soroban-sdk-macros = "21.3"

[dev-dependencies]
soroban-sdk = { version = "21.3", features = ["testutils"] }

[[example]]
name = "contract"
path = "examples/contract.rs"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
